# esp32_hebbian_learning

./: .gitignore  AGENTS.md  CMakeLists.txt  Kconfig.projbuild  LICENSE  README.md  README2.md  TODO.md  dynamics_data.json  mcp_server.py  platformio.ini  prompt.md  requirements.txt  requirements_minimal.txt  requirements_no_torch.txt  sdkconfig  simple_mcp_client.py  socket_utils.py  test_mcp_server.py  unit_test_script.py  waldo_arm_demo.py  waldo_arm_demo_webcam.py  waldo_arm_demo_webcam_llm.py  waldo_arm_demo_webcam_llm_jpg.py
docs/: ARCHITECTURE.md
examples/: README.md  waldo_arm_demo.py  waldo_arm_demo_webcam.py  waldo_arm_demo_webcam_llm.py  waldo_arm_demo_webcam_llm_jpg.py
main/: CMakeLists.txt  behavior.c  behavior.h  behavior_tree.c  behavior_tree.h  bma400_driver.c  bma400_driver.h  commands.h  common.h  config.c  config.h  console.c  console.h  feetech_protocol.c  feetech_protocol.h  generated_gestures.h_sample  idf_component.yml  inter_esp_comm.c  inter_esp_comm.h  kinematics.c  kinematics.h  led_indicator.c  led_indicator.h  main.c  main.h  master_controller.c  master_controller.h  mcp_server.c  mcp_server.h  mcp_server_commands.h  message_bus.c  message_bus.h  nvs_storage.c  nvs_storage.h  omni_base.c  omni_base.h  planner.c  planner.h  planner_rrt.c  robot_body.c  (+14 more)
main/test/: test_console.c
sample NN export data/: nn data 7_1_2025.txt
tests/: README.md  robot_client.py  test_ik.c  test_mcp_server.py  test_rrt.c  test_rrt_collision.c  test_torch.py  unit_test_script.py  unit_tests.c  verify_spline_logic.c
tools/: config_to_c_array.py  (+2 more)
(+28 files in other folders)
